# DS18B20_Tiny13

./: .gitignore  CMakeLists.txt  README.md
docs/: Makefile  ds18b20_tiny13.lay6  ds18b20_tiny13.spl7
src/: main.c
